examples/test/testpolicy7396.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7396
  namespace: namespace427
spec:
  podSelector:
    matchLabels:
      key47: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value2
          key12: value40
          key45: value26
      podSelector:
        matchLabels:
          key13: value3
          key38: value37
          key42: value45
